--- a/at_work/Brewfile
+++ b/at_work/Brewfile
@@ -2,13 +2,21 @@ update
 
 upgrade
 
+tap phinze/homebrew-cask
+install brew-cask
+
 install redis
 install mysql --cc=llvm-gcc
 install tree
 install zsh
 install hub
 install the_silver_searcher
+install mysql
+install memcached
 install boot2docker
 install docker
+
+cask install virtualbox
+cask install vagrant
 
 cleanup
