--- a/at_home/Brewfile
+++ b/at_home/Brewfile
@@ -13,10 +13,15 @@ install hub
 install the_silver_searcher
 install mysql
 install memcached
+
+# Docker & Vagrant
 install boot2docker
 install docker
-
 cask install virtualbox
 cask install vagrant
+
+# Ruby
+install rbenv
+install ruby-build
 
 cleanup
